# Phos

./: .gitignore  .gitmodules  CMakeLists.txt  DEBUG.md  LICENSE  README.md  cmake-variants.yaml
src/Boot/: CMakeLists.txt  Debug.c  Debug.h  Guids.c  Loader.c  Loader.h  Main.c  Memory.c  Memory.h  PhosBoot.h  String.c  String.h
src/Kernel/: CMakeLists.txt  Main.c  Phos.h  PhosBase.h
src/Kernel/Hal/: Gdt.c  Hal.h
src/Phosboot/: CMakeLists.txt  Debug.c  Debug.h  Guids.c  Loader.c  Loader.h  Main.c  Memory.c  Memory.h  Phosboot.h  String.c  String.h
src/Phosdb/: CMakeLists.txt  Direct3D.cc  Direct3D.hh  ImConfig.hh  Logger.cc  Logger.h  Logger.hh  Main.c  Main.cc  Main.cpp  Phosdb.cc  Phosdb.h  Phosdb.hh  TcpClient.cc  TcpClient.hh  Util.cc  Util.hh  Window.cc  Window.cpp  Window.h  Window.hh
src/Phosdb/Clients/: SerialClient.cc  SerialClient.hh  TcpClient.cc  TcpClient.hh
src/Phosdb/GUI/: SerialWindow.cc  SerialWindow.hh  Window.hh
src/Phoskrnl/: CMakeLists.txt  Intrinsics.h  Main.c  Phos.h  PhosBase.h
src/Phoskrnl/Hal/: Gdt.c  Gdtr.asm  Hal.h  Serial.c
src/Phoskrnl/Kd/: Kd.c  Kd.h
src/Phoskrnl/Ke/: Ke.c  Ke.h
src/Phoskrnl/Rtl/: Memory.c  Rtl.h  String.c
src/Shared/: Intrinsics.h  Phosdef.h  Phoskinit.h
src/Shared/Debug/: Protocol.c  Protocol.h
